--- a/faq-accordion-card-main/index.html
+++ b/faq-accordion-card-main/index.html
@@ -1,40 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | FAQ Accordion Card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="styles.css">
+
 </head>
+
 <body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
+  
+  <div class="purple-bg">
+  </div>
+  <div class="wrapper">
+    <div class="inner-images">
+      <img src="images/illustration-woman-online-desktop.svg" id="woman-desktop">
+      <img src="images/bg-pattern-desktop.svg" id="pattern-desktop">
+      <img src="images/illustration-box-desktop.svg" id="box">
+    </div>
+    <div class="questions">
+      
+      <div id="title">
+        <h1>FAQ</h1>
+      </div>
+      <button class="accordion">How many team members can I invite?</button>
+      <div class="panel">
+        <p>You can invite up to 2 additional users on the Free plan. There is no limit on
+          team members for the Premium plan</p>
+      </div>
+      <hr class="solid">
+      <button class="accordion">What is the maximum file upload size?</button>
+      <div class="panel">
+        <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
+      </div>
+      <hr class="solid">
+      <button class="accordion">How do I reset my password?</button>
+      <div class="panel">
+        <p>Click “Forgot password” from the login page or “Change password” from your profile page.
+          A reset link will be emailed to you.</p>
+      </div>
+      <hr class="solid">
+      <button class="accordion">Can I cancel my subscription?</button>
+      <div class="panel">
+        <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
+      </div>
+      <hr class="solid">
+      <button class="accordion">Do you provide additional support?</button>
+      <div class="panel">
+        <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+      </div>
+      <hr class="solid">
+    </div>
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
+  </div>
 
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
-
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
-
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
-
+  <script src="main.js"></script>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Codrin Carpovici</a>. <!--add site link-->
   </div>
 </body>
+
 </html>
